// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RangeDataPicker should be rendered if many params defined 1`] = `
<DocumentFragment>
  <div
    class="uui-size-36 uui-range-date-picker root uui-disabled uui-readonly uui-invalid"
  >
    <div
      class="container uui-input-box uui-disabled uui-readonly uui-invalid root uui-size-36 uui-control-mode-form dateInput"
      tabindex="-1"
    >
      <div
        aria-label="Icon in input"
        class="container uui-icon uui-enabled"
      >
        <svg
          class=""
        />
      </div>
      <input
        aria-disabled="true"
        aria-invalid="true"
        class="uui-input"
        disabled=""
        id="date"
        placeholder=""
        readonly=""
        tabindex="-1"
        type="text"
        value=""
      />
    </div>
    <div
      class="separator"
    />
    <div
      class="container uui-input-box uui-disabled uui-readonly uui-invalid root uui-size-36 uui-control-mode-form dateInput"
      tabindex="-1"
    >
      <input
        aria-disabled="true"
        aria-invalid="true"
        class="uui-input"
        disabled=""
        placeholder=""
        readonly=""
        tabindex="-1"
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`RangeDataPicker should be rendered if minimum params and custom format defined 1`] = `
<DocumentFragment>
  <div
    class="uui-size-36 uui-range-date-picker root"
  >
    <div
      class="container uui-input-box -clickable root uui-size-36 uui-control-mode-form dateInput"
      tabindex="-1"
    >
      <div
        aria-label="Icon in input"
        class="container uui-icon uui-enabled"
      >
        <svg
          class=""
        />
      </div>
      <input
        class="uui-input"
        placeholder="From"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="separator"
    />
    <div
      class="container uui-input-box -clickable root uui-size-36 uui-control-mode-form dateInput"
      tabindex="-1"
    >
      <input
        class="uui-input"
        placeholder="To"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;
